js/src/tests/test262/built-ins/Error/prototype/toString/name.js
assert
.
sameValue
(
Error
.
prototype
.
toString
.
name
"
toString
"
)
;
verifyNotEnumerable
(
Error
.
prototype
.
toString
"
name
"
)
;
verifyNotWritable
(
Error
.
prototype
.
toString
"
name
"
)
;
verifyConfigurable
(
Error
.
prototype
.
toString
"
name
"
)
;
reportCompare
(
0
0
)
;
